Fix graphs not all showing on narrow screens

--- a/ui/src/app/components/results/results.component.scss
+++ b/ui/src/app/components/results/results.component.scss
@@ -60,6 +60,7 @@
     padding: 0;
     margin: 2px 0;
     height: 100%;
+    max-width: 33%;
 }
 
 .roc-graphs {
